--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Development Club @ UWT</title>
+    <title>HackSU 2025</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
     <section class="header">
         <nav>
            
-            <a><img src="https://i.ibb.co/JHHFrZH/logo-transparent.png" alt="Logo"></a>
+            <a><img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul style="text-align:right;">
@@ -26,9 +26,7 @@
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
         <div class="text-box">
-            <h1>Game Development Club</h1>
-            <p>@ University of Washington Tacoma</p>
-            <a href="https://dubnet.tacoma.uw.edu/uwtgdc/club_signup" class="hero-btn">JOIN US</a>
+            <h1>HackSU2025 - Seattle University Campus App</hi>
         </div>
     </section>
    
