--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
    
 <!-- Location Section -->
 <section class="location" id="spot">
-    <h1>Location</h1>
+    <h1>Campus Map</h1>
     <div class="location-content">
         <div class="location-map">
             <iframe src="https://www.seattleu.edu/media/SUCampusMap18.pdf"
