--- a/index.html
+++ b/index.html
@@ -32,18 +32,13 @@
    
     <section class="about-club">
     <div class="about-container">
-        <h2>About the Game Development Club</h2>
+        <h2>HackSU2025 Project Details</h2>
         <p>
-            Welcome to the Game Development Club at the University of Washington Tacoma!
-            Our club is dedicated to fostering creativity and collaboration among aspiring game developers.
-            Whether you are a designer, programmer, artist, or just passionate about games, there's a place for you here.
-            We hold regular meetings to collaborate on projects together, as well as host events like game jams to spark creativity and innovation among our members.
+            This application is a proof of concept, and is intended for the use of SU students as a general campus aid, outside of seattleu.edu, whether it is used to book a study room, check where their teachers offices are and their office hours, or if an emergency is occurring and someone needs to be contacted, this application should be able to handle most if not all actions a student could take. This is a template, and is not fully polished. The end goal for this project is to end up as an application, for both desktop and mobile, so if anyone is interested in furthering this idea, let me know.
         </p>
+        
         <p>
-            Join us to learn, build, and play. Together, let's create the future of gaming!
-        </p>
-        <p>
-            <a href="#ctct" class="index-button">Find us here!</a>
+            <a href="location.html" class="index-button">Ex. "Click here in case of emergency."</a>
         </p>
         
     </div>
