--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <!-- Location Section -->
 <section class="location" id="spot">
     <h1>Campus Map</h1>
-    <div class="location-content">
+    <div class="location-content" align="center">
         <div class="location-map">
             <iframe src="https://www.seattleu.edu/media/SUCampusMap18.pdf"
                     style="border:10px;"
