--- a/location.html
+++ b/location.html
@@ -150,7 +150,7 @@
                         </p>
                         <p>
                             <i class="fas fa-clock" style="color: rgba(0, 255, 174, 0.589);"></i>
-                            <strong style="color: rgb(255, 0, 0);">Hours:</strong> <span class="hours-info">M-F 10am–6pm.</span>
+                            <strong style="color: rgb(255, 0, 0);">Hours:</strong> <span class="hours-info">M-F 10am-6pm.</span>
                         </p>
                         <p>
                             <i class="fas fa-phone" style="color: rgba(0, 255, 174, 0.589);"></i>
@@ -182,7 +182,7 @@
                         </p>
                         <p>
                             <i class="fas fa-clock" style="color: rgba(0, 255, 174, 0.589);"></i>
-                            <strong style="color: rgb(255, 0, 0);">Hours:</strong> <span class="hours-info">M-F 10am–6pm.</span>
+                            <strong style="color: rgb(255, 0, 0);">Hours:</strong> <span class="hours-info">M-F 10am-6pm.</span>
                         </p>
                         <p>
                             <i class="fas fa-phone" style="color: rgba(0, 255, 174, 0.589);"></i>
@@ -209,7 +209,7 @@
                         
                         <p>
                             <i class="fas fa-map-marker-alt" style="color: rgba(0, 255, 174, 0.589);"></i>
-                            <strong style="color: rgb(255, 0, 0);">Location:</strong> <span class="office-info">Student Center floor 2.</span>
+                            <strong style="color: rgb(255, 0, 0);">Location:</strong> <span class="office-info">Student Center Floor 2.</span>
                         </p>
                         <p>
                             <i class="fas fa-clock" style="color: rgba(0, 255, 174, 0.589);"></i>
@@ -217,7 +217,7 @@
                         </p>
                         <p>
                             <i class="fas fa-phone" style="color: rgba(0, 255, 174, 0.589);"></i>
-                            <strong style="color: rgb(255, 0, 0);">Phone:</strong> <span class="phone-info"></span>
+                            <strong style="color: rgb(255, 0, 0);">Phone:</strong> <span class="phone-info">None listed.</span>
                         </p>
                         <p>
                             <i class="fas fa-envelope" style="color: rgba(0, 255, 174, 0.589);"></i>
