--- a/location.html
+++ b/location.html
@@ -118,11 +118,11 @@
                         </p>
                         <p>
                             <i class="fas fa-clock" style="color: rgba(0, 255, 174, 0.589);"></i>
-                            <strong style="color: rgb(255, 0, 0);">Hours:</strong> <span class="hours-info">M-F 8 a.m.-4:30 p.m.</span>
+                            <strong style="color: rgb(255, 0, 0);">Hours:</strong> <span class="hours-info">M-F 8am-4:30pm.</span>
                         </p>
                         <p>
                             <i class="fas fa-phone" style="color: rgba(0, 255, 174, 0.589);"></i>
-                            <strong style="color: rgb(255, 0, 0);">Phone:</strong> <span class="phone-info">(206)-296-2500</span>
+                            <strong style="color: rgb(255, 0, 0);">Phone:</strong> <span class="phone-info">(206) 296 2500</span>
                         </p>
                         <p>
                             <i class="fas fa-envelope" style="color: rgba(0, 255, 174, 0.589);"></i>
@@ -213,7 +213,7 @@
                         </p>
                         <p>
                             <i class="fas fa-clock" style="color: rgba(0, 255, 174, 0.589);"></i>
-                            <strong style="color: rgb(255, 0, 0);">Hours:</strong> <span class="hours-info">Mon-Sun 8:00-22:00</span>
+                            <strong style="color: rgb(255, 0, 0);">Hours:</strong> <span class="hours-info">Mon-Sun 8am-10pm</span>
                         </p>
                         <p>
                             <i class="fas fa-phone" style="color: rgba(0, 255, 174, 0.589);"></i>
@@ -221,7 +221,7 @@
                         </p>
                         <p>
                             <i class="fas fa-envelope" style="color: rgba(0, 255, 174, 0.589);"></i>
-                            <strong style="color: rgb(255, 0, 0);">Email:</strong> <span class="email-info"></span>
+                            <strong style="color: rgb(255, 0, 0);">Email:</strong> <span class="email-info">None listed.</span>
                         </p>
                     </div>
                     <div class="office-photo">
@@ -245,11 +245,11 @@
                         </p>
                         <p>
                             <i class="fas fa-clock" style="color: rgba(0, 255, 174, 0.589);"></i>
-                            <strong style="color: rgb(255, 0, 0);">Hours:</strong> <span class="hours-info">Mon-Thurs, 8:30am-4:00pm</span>
+                            <strong style="color: rgb(255, 0, 0);">Hours:</strong> <span class="hours-info">Mon-Thurs 8:30am-4pm</span>
                         </p>
                         <p>
                             <i class="fas fa-phone" style="color: rgba(0, 255, 174, 0.589);"></i>
-                            <strong style="color: rgb(255, 0, 0);">Phone:</strong> <span class="phone-info">206-296-5990</span>
+                            <strong style="color: rgb(255, 0, 0);">Phone:</strong> <span class="phone-info">(206) 296 5990</span>
                         </p>
                         <p>
                             <i class="fas fa-envelope" style="color: rgba(0, 255, 174, 0.589);"></i>
