--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
 <!-- Footer -->
 <footer class="footer">
     <div class="footer-content">
-        <div class="footer-section">
-            <img src="https://i.ibb.co/JHHFrZH/logo-transparent.png" alt="Logo" class="footer-logo">
+        <div class="footer-section" align="center">
+            <img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo" class="footer-logo">
             <p>Game Development Club @ UWT</p>
         </div>
-        <div class="footer-section">
+        <div class="footer-section" align="center">
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -160,14 +160,6 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
-        </div>
-        <div class="footer-section">
-            <h3>Follow Us</h3>
-            <div class="social-links">
-                <a href="https://discord.gg/rmWfm42tJv"><i class="fab fa-discord"></i></a>
-                <a href="https://www.instagram.com/gamedevclubuwt/"><i class="fab fa-instagram"></i></a>
-                <a href="https://github.com/uwtgdc"><i class="fab fa-github"></i></a>
-            </div>
         </div>
     </div>
     <div class="footer-bottom">
