--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div class="footer-content">
         <div class="footer-section" align="center">
             <img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo" class="footer-logo">
-            <p>Game Development Club @ UWT</p>
+            <p>HackSU2025 - SUCA</p>
         </div>
         <div class="footer-section" align="center">
             <h3>Quick Links</h3>
@@ -163,7 +163,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p>&copy; 2025 Game Development Club @ UWT.</p>
+        <p>&copy; HackSU2025 - SUCA</p>
     </div>
 </footer>
    
