--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul style="text-align:right;">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html#">Home</a></li>
                     <li><a href="about.html" target="_blank">About Us</a></li>
-                    <li><a href="#info">Club Activities</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="index.html#info">Placeholder</a></li>
+                    <li><a href="contact.html" target="_blank">Contact Us</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -99,9 +99,9 @@
         <div class="footer-section" align="center">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#info">Information</a></li>
-                <li><a href="#spot">Location</a></li>
+                <li><a href="index.html#">Home</a></li>
+                <li><a href="index.html#info">Placeholder</a></li>
+                <li><a href="index.html#spot">Campus Map</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
