--- a/professor_info.html
+++ b/professor_info.html
@@ -78,68 +78,59 @@
             <ul>
                 <li><a href="index.html" target="_blank">Home</a></li>
                 <li><a href="about.html" target="_blank">About Us</a></li>
-                <li><a href="index.html#info" target="_blank">Club Activities</a></li>
+                <li><a href="index.html#info" target="_blank">Campus Resources</a></li>
                 <li><a href="index.html#ctct" target="_blank">Contact Us</a></li>
             </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
     </nav>
 
-    <h1>Ongoing Projects</h1>
-    <p>Welcome to the current projects page of the Game Development Club @ UWT! Here you can learn about projects that are currently happening in the club!</p>
-    <p>If you want to join any of these projects, please send a message into their respective channels in the Game Dev @ UWT Discord Server!</p>
+    <h1>Placeholder Page</h1>
+    <p>This page currently serves no purpose other than as a placeholder. One idea is that it houses the information about all the professors at the school that quarter, ie their contact info, office room and building, office hours, etc. There could also be a method of selecting which professors you have, where it then "favorites" them, putting them in their own section, and removing them from the general selection, or alternatively, it removes all unselected professors.</p>
+    <p>Ex. "Listed here is the contact information and room number for every professor working at SU this quarter/year, ordered by building/department/schedule/name."</p>
 
     <div class="project-card">
-        <h2 style="color: darkgreen;">Dystopian Space Huskies ~ An Original Game Made in Godot</h2>
-        <p>A husky is trying to fight to rescue its human from the dystopian powers-that-be on his celestial body.</p>
-        <p><strong>When the Project Started:</strong> October 2024</p>
-        <p><strong>Software Used:</strong> Godot and GitHub; <strong>Programming Language:</strong> C#</p>
+        <h2 style="color: darkgreen;">John Doe - Professor in Education</h2>
+        <p>Student Center, Room 160, Podium</p>
+        <p><strong>Office Hours:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
+        <p><strong>Email: </strong> johndoe+fake@su.edu <strong>Number:</strong> 123-456-JOHN</p>
     </div>
 
     <div class="project-card">
-        <h2 style="color: darkred;">Getting Saucy! ~ An Original Game Made in Unity</h2>
-        <p>A 2D platformer with mouse aiming shooting mechanics with pixel art and a level structure where you play as a chicken named Saucy.</p>
-        <p>Main objective is to escape the fridge!</p>
-        <p><strong>When the Project Started:</strong> October 2024</p>
-        <p><strong>Software Used:</strong> Unity and GitHub; <strong>Programming Language:</strong> C#</p>
+        <h2 style="color: darkred;">Jane Doe - Professor in Biology</h2>
+        <p>Student Center, Room 160, Judge Table</p>
+        <p><strong>Office Hours:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
+        <p><strong>Email:</strong> janedoe+fake@su.edu <strong>Number:</strong> 123-456-JANE</p>
     </div>
 
     <div class="project-card">
-        <h2 style="color: navy;">Creating the Game Development Club @ UWT Webpage</h2>
-        <p>To showcase our club's mission, activities, and achievements. Provide details about upcoming events. Highlight the games and projects developed by our members. Serve as a portal for resources and useful links related to game development.</p>
-        <p><strong>When the Project Started:</strong> December 2024</p>
-        <p><strong>Software Used:</strong> GitHub and Visual Studio Code; <strong>Programming Language:</strong> C#</p>
-        <p><strong>Future Website Update Goals:</strong> Implementing JavaScript and React</p>
+        <h2 style="color: navy;">Carl Smith - Professor in Your Major</h2>
+        <p>Student Center, Room 160, Behind You</p>
+        <p><strong>Office Hours:</strong> Today and Yesterday of this Year</p>
+        <p><strong>Email:</strong> carlsmith+fake@su.edu; <strong>Number:</strong> 123-456-CARL</p>
     </div>
 
 <!-- Footer -->
 <footer class="footer">
     <div class="footer-content">
-        <div class="footer-section">
-            <img src="https://i.ibb.co/JHHFrZH/logo-transparent.png" alt="Logo" class="footer-logo">
-            <p>Game Development Club @ UWT</p>
+        <div class="footer-section" align="center">
+            <img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo" class="footer-logo">
+            <p>HackSU2025 - SUCA</p>
         </div>
-       <div class="footer-section">
+       <div class="footer-section" align="center">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#info">Information</a></li>
-                <li><a href="#spot">Location</a></li>
+                <li><a href="index.html#">Home</a></li>
+                <li><a href="index.html#info">Campus Resources</a></li>
+                <li><a href="index.html#spot">Campus Map</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
-        <div class="footer-section">
-            <h3>Follow Us</h3>
-            <div class="social-links">
-                <a href="https://discord.gg/rmWfm42tJv"><i class="fab fa-discord"></i></a>
-                <a href="https://www.instagram.com/gamedevclubuwt/"><i class="fab fa-instagram"></i></a>
-                <a href="https://github.com/uwtgdc"><i class="fab fa-github"></i></a>
-            </div>
-        </div>
+       
     </div>
     <div class="footer-bottom">
-        <p>&copy; 2025 Game Development Club @ UWT.</p>
+        <p>&copy; HackSU2025 - SUCA.</p>
     </div>
 </footer>
 </body>
