--- a/professor_info.html
+++ b/professor_info.html
@@ -129,7 +129,7 @@
         </div>
        
     </div>
-    <div class="footer-bottom" align="center">
+    <div align="center">
         <p>&copy; HackSU2025 - SUCA.</p>
     </div>
 </footer>
