--- a/professor_info.html
+++ b/professor_info.html
@@ -114,7 +114,7 @@
         </div>
        
     </div>
-    <div align="center">
+    <div class="footer-bottom">
         <p>&copy; HackSU2025 - SUCA.</p>
     </div>
 </footer>
