--- a/professor_info.html
+++ b/professor_info.html
@@ -10,9 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
-        body {
-            background-color: #f9f9f9;
-        }
+        
 
         h1 {
             font-family: 'Montserrat', sans-serif;
@@ -57,7 +55,7 @@
 </head>
 <body>
     <nav>   
-        <a><img src="https://i.ibb.co/JHHFrZH/logo-transparent.png" alt="Logo"></a>
+        <a><img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo"></a>
         <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hideMenu()"></i>
             <ul>
