--- a/professor_info.html
+++ b/professor_info.html
@@ -20,6 +20,13 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
 
+        .footer (
+        background: transparent;
+        color: transparent;
+        padding: 4rem 0 1rem 0;
+        margin-top: 4rem;
+        )
+
     </style>
 </head>
 <body>
