--- a/professor_info.html
+++ b/professor_info.html
@@ -20,16 +20,21 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
 
-        .footer (
+        .footer-prof (
         background: transparent;
         color: transparent;
         padding: 4rem 0 1rem 0;
         margin-top: 4rem;
         )
 
+        .body-prof (
+        overflow-x: hidden;
+        background-image: linear-gradient(rgb(255,36,0), black);
+        )
+
     </style>
 </head>
-<body>
+<body-prof>
     <nav>   
         <a><img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo"></a>
         <div class="nav-links" id="navLinks">
@@ -80,7 +85,7 @@
     </div>
 
 <!-- Footer -->
-<footer class="footer">
+<footer class="footer-prof">
     <div class="footer-content">
         <div class="footer-section" align="center">
             <img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo" class="footer-logo">
@@ -104,5 +109,5 @@
 </footer>
 
 
-</body>
+</body-prof>
 </html>
