--- a/professor_info.html
+++ b/professor_info.html
@@ -27,14 +27,11 @@
         margin-top: 4rem;
         )
 
-        .body-prof (
-        overflow-x: hidden;
-        background-image: linear-gradient(rgb(255,36,0), black);
-        )
+       
 
     </style>
 </head>
-<body-prof>
+<body>
     <nav>   
         <a><img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo"></a>
         <div class="nav-links" id="navLinks">
@@ -109,5 +106,5 @@
 </footer>
 
 
-</body-prof>
+</body>
 </html>
