--- a/professor_info.html
+++ b/professor_info.html
@@ -27,11 +27,16 @@
         margin-top: 4rem;
         )
 
+        .body-prof {
+            background-image: linear-gradient(rgb(255,36,0), black);
+            background: rgba(0,0,0,0);
+        }
        
 
     </style>
 </head>
 <body>
+    <div class="body-prof">
     <nav>   
         <a><img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo"></a>
         <div class="nav-links" id="navLinks">
@@ -105,6 +110,6 @@
     </div>
 </footer>
 
-
+</div>
 </body>
 </html>
