--- a/professor_info.html
+++ b/professor_info.html
@@ -20,13 +20,6 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
 
-        .footer-prof (
-        background: transparent;
-        color: transparent;
-        padding: 4rem 0 1rem 0;
-        margin-top: 4rem;
-        )
-
        
 
     </style>
@@ -83,7 +76,7 @@
     </div>
 
 <!-- Footer -->
-<footer class="footer-prof">
+<footer class="footer">
     <div class="footer-content">
         <div class="footer-section" align="center">
             <img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo" class="footer-logo">
