--- a/professor_info.html
+++ b/professor_info.html
@@ -15,10 +15,10 @@
             max-width: 900px;
             margin: 20px auto;
             padding: 20px;
-            background: #ff2000;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             text-color: #000
+            color: #000;
         }
 
         .prof-card p {
@@ -69,21 +69,21 @@
     
 
     <div class="prof-card">
-        <h2 style="color: darkgreen;">John Doe - Professor in Education</h2>
+        <h2>John Doe - Professor in Education</h2>
         <p>Student Center, Room 160, Podium</p>
         <p><strong>Office Hours:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
         <p><strong>Email: </strong> johndoe+fake@su.edu <strong>Number:</strong> 123-456-JOHN</p>
     </div>
 
     <div class="prof-card">
-        <h2 style="color: darkred;">Jane Doe - Professor in Biology</h2>
+        <h2>Jane Doe - Professor in Biology</h2>
         <p>Student Center, Room 160, Judge Table</p>
         <p><strong>Office Hours:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
         <p><strong>Email:</strong> janedoe+fake@su.edu <strong>Number:</strong> 123-456-JANE</p>
     </div>
 
     <div class="prof-card">
-        <h2 style="color: navy;">Carl Smith - Professor in Your Major</h2>
+        <h2>Carl Smith - Professor in Your Major</h2>
         <p>Student Center, Room 160, Behind You</p>
         <p><strong>Office Hours:</strong> Today and Yesterday of this Year</p>
         <p><strong>Email:</strong> carlsmith+fake@su.edu; <strong>Number:</strong> 123-456-CARL</p>
