--- a/professor_info.html
+++ b/professor_info.html
@@ -17,8 +17,8 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            text-color: #000
-            color: #000;
+            text-color: #fff
+            background: #000;
         }
 
         .prof-card p {
