--- a/professor_info.html
+++ b/professor_info.html
@@ -18,7 +18,7 @@
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             text-color: #fff
-            background: #000;
+            background-color: rgba(0,0,0,0.7);
         }
 
         .prof-card p {
