--- a/club_activities.html
+++ b/club_activities.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Placeholder</title>
+    <title>SU - Club Activities</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,10 +53,10 @@
         <i class="fa fa-bars" onclick="showMenu()"></i>
     </nav>
 
-    <h1 align="center">Placeholder<section class="about-club">
+    <h1 align="center">Club Activies<section class="about-club">
     <div class="about-container">
         <h2>HackSU2025 Example Page</h2>
-        <p>This page currently serves no purpose other than as a placeholder. One idea is that it houses information about club activities with one week advance notice.</p>
+        <p>This page currently serves no purpose other than as a placeholder. One idea is that it houses information about club activities with one week (or other reasonable time) advance notice, includes the club, club home room (if applicable), next event (if within set time period), location of said event, and what time it takes place at.</p>
         
         <p>
             Ex. "Listed here are all the club activities up to seven days from now."
@@ -71,21 +71,24 @@
         <h2>Association for Computing Machinery</h2>
         <p>Club Home Room : Seattle University Student Center</p>
         <p><strong>Next Event:</strong> Seattle University Hackathon 2025</p>
-        <p><strong>Location:</strong> Seattle University Student Center, Room 160 <strong>Time:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
+        <p><strong>Location:</strong> Seattle University Student Center, Room 160</p>
+        <p><strong>Time:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
     </div>
 
     <div class="prof-card">
         <h2>Women in Technology</h2>
         <p>Club Home Room : Seattle University Student Center</p>
         <p><strong>Next Event:</strong> Seattle University Hackathon 2025</p>
-        <p><strong>Location:</strong> Seattle University Student Center, Room 160 <strong>Time:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
+        <p><strong>Location:</strong> Seattle University Student Center, Room 160</p>
+        <p><strong>Time:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
     </div>
 
     <div class="prof-card">
         <h2>Artificial and Intelligent Machine Learning Club</h2>
         <p>Club Home Room : Seattle University Pigott 101</p>
         <p><strong>Next Event:</strong> Seattle University Hackathon 2025</p>
-        <p><strong>Location:</strong> Seattle University Student Center, Room 160 <strong>Time:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
+        <p><strong>Location:</strong> Seattle University Student Center, Room 160</p>
+        <p><strong>Time:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
     </div>
 
 <!-- Footer -->
