--- a/professor_info.html
+++ b/professor_info.html
@@ -33,11 +33,17 @@
             margin-bottom: 1rem;
         }
 
+        #profPage {
+
+            overflow: hidden;
+            background-image: linear-gradient(rgb(255, 36, 0), black);
+            
+        }
        
 
     </style>
 </head>
-<body>
+<body id="profPage">
    
     <nav>   
         <a><img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo"></a>
