--- a/professor_info.html
+++ b/professor_info.html
@@ -35,7 +35,7 @@
 
         #profPage {
 
-            overflow: hidden;
+            overflow-x: hidden;
             background-image: linear-gradient(rgb(255, 36, 0), black);
             
         }
