--- a/club_activities.html
+++ b/club_activities.html
@@ -27,7 +27,7 @@
         <i class="fa fa-bars" onclick="showMenu()"></i>
     </nav>
 
-    <h1 align="center">Club Activies<section class="about-club">
+    <h1 align="center">Club Activities<section class="about-club">
     <div class="about-container">
         <h2>HackSU2025 Example Page</h2>
         <p>This page currently serves no purpose other than as a placeholder. One idea is that it houses information about club activities with one week (or other reasonable time) advance notice, includes the club, club home room (if applicable), next event (if within set time period), location of said event, and what time it takes place at.</p>
@@ -66,7 +66,7 @@
     </div>
 
 <!-- Footer -->
-<footer class="footer">
+<footer style="margin-top:4rem">
     <div class="footer-content">
         <div class="footer-section" align="center">
             <img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo" class="footer-logo">
