--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <a href="upcoming_events.html" target="_blank">
                     <img src="https://i.ibb.co/3rQppqz/place3.jpg" alt="Section 3" style="opacity:0">
                     <div class="layer">
-                        <h3>Placeholder 3</h3>
+                        <h3>School Events</h3>
                     </div>
                 </a>
             </div>
