--- a/club_activities.html
+++ b/club_activities.html
@@ -66,7 +66,7 @@
     </div>
 
 <!-- Footer -->
-<footer style="margin-top:4rem">
+<footer class="footer">
     <div class="footer-content">
         <div class="footer-section" align="center">
             <img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo" class="footer-logo">
