--- a/professor_info.html
+++ b/professor_info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Current Projects of Game Dev Club @ UWT</title>
+    <title>SU - Professor Info</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,7 +63,7 @@
     </div>
 
 <!-- Footer -->
-<footer style="margin-top: 4rem">
+<footer class="footer">
     <div class="footer-content">
         <div class="footer-section" align="center">
             <img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo" class="footer-logo">
