--- a/club_activities.html
+++ b/club_activities.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
    
 </head>
-<body id="clubPage">
+<body id="otherPage">
    
     <nav>   
         <a><img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo"></a>
@@ -41,7 +41,7 @@
     
     
 
-    <div class="club-card">
+    <div class="card">
         <h2>Association for Computing Machinery</h2>
         <p>Club Home Room : Seattle University Student Center</p>
         <p><strong>Next Event:</strong> Seattle University Hackathon 2025</p>
@@ -49,7 +49,7 @@
         <p><strong>Time:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
     </div>
 
-    <div class="club-card">
+    <div class="card">
         <h2>Women in Technology</h2>
         <p>Club Home Room : Seattle University Student Center</p>
         <p><strong>Next Event:</strong> Seattle University Hackathon 2025</p>
@@ -57,7 +57,7 @@
         <p><strong>Time:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
     </div>
 
-    <div class="club-card">
+    <div class="card">
         <h2>Artificial and Intelligent Machine Learning Club</h2>
         <p>Club Home Room : Seattle University Pigott 101</p>
         <p><strong>Next Event:</strong> Seattle University Hackathon 2025</p>
