--- a/professor_info.html
+++ b/professor_info.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   
 </head>
-<body id="profPage">
+<body id="otherPage">
    
     <nav>   
         <a><img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo"></a>
@@ -41,21 +41,21 @@
     
     
 
-    <div class="prof-card">
+    <div class="card">
         <h2>John Doe - Professor in Education</h2>
         <p>Student Center, Room 160, Podium</p>
         <p><strong>Office Hours:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
         <p><strong>Email: </strong> johndoe+fake@su.edu <strong>Number:</strong> 123-456-JOHN</p>
     </div>
 
-    <div class="prof-card">
+    <div class="card">
         <h2>Jane Doe - Professor in Biology</h2>
         <p>Student Center, Room 160, Judge Table</p>
         <p><strong>Office Hours:</strong> Feb 1st 12 pm - Feb 2nd 2 pm, 2025</p>
         <p><strong>Email:</strong> janedoe+fake@su.edu <strong>Number:</strong> 123-456-JANE</p>
     </div>
 
-    <div class="prof-card">
+    <div class="card">
         <h2>Carl Smith - Professor in Your Major</h2>
         <p>Student Center, Room 160, Behind You</p>
         <p><strong>Office Hours:</strong> Today and Yesterday of this Year</p>
