--- a/school_events.html
+++ b/school_events.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
    
 </head>
-<body id="clubPage">
+<body id="otherPage">
    
     <nav>   
         <a><img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo"></a>
@@ -41,21 +41,21 @@
     
     
 
-    <div class="club-card">
+    <div class="card">
         <h2>Week Three - URGENT!!!</h2>
         <p>TUITION DUE</p>
         <p><strong>Priority:</strong> Highest</p>
         <p><strong>Action Needed:</strong> Pay your tuition fees to keep your enrollment. Paying late may add additional fees.</p>
     </div>
 
-    <div class="club-card">
+    <div class="card">
         <h2>Week 5 - Important</h2>
         <p>Midterms</p>
         <p><strong>Priority:</strong> High</p>
         <p><strong>Action Needed:</strong> Study well and Good luck.</p>
     </div>
 
-    <div class="club-card">
+    <div class="card">
         <h2>Week 8 - Important</h2>
         <p>Next Quarter Registration Opens</p>
         <p><strong>Priority:</strong> High</p>
