--- a/club_activities.html
+++ b/club_activities.html
@@ -19,7 +19,7 @@
             <i class="fa fa-times" onclick="hideMenu()"></i>
             <ul>
                 <li><a href="index.html" target="_blank">Home</a></li>
-                <li><a href="about.html" target="_blank">About Us</a></li>
+                <li><a href="https://www.linkedin.com/in/peytonlaudanski/" target="_blank">About Us (Me*)</a></li>
                 <li><a href="index.html#info" target="_blank">Campus Resources</a></li>
                 <li><a href="index.html#ctct" target="_blank">Contact Us</a></li>
             </ul>
