--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul style="text-align:right;">
                     <li><a href="index.html#">Home</a></li>
-                    <li><a href="about.html" target="_blank">About Us</a></li>
+                    <li><a href="https://www.linkedin.com/in/peytonlaudanski/" target="_blank">About Us (Me*)</a></li>
                     <li><a href="index.html#info">Campus Resources</a></li>
                     <li><a href="contact.html" target="_blank">Contact Us</a></li>
                 </ul>
