--- a/professor_info.html
+++ b/professor_info.html
@@ -74,9 +74,8 @@
             <ul>
                 <li><a href="index.html#">Home</a></li>
                 <li><a href="index.html#info">Campus Resources</a></li>
-                <li><a href="index.html#spot">Campus Map</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About</a></li>
+=                <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://www.linkedin.com/in/peytonlaudanski/" target="_blank">About Us (Me*)</a></li>
             </ul>
         </div>
        
